--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alexa-language-shorthand",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Provides a utility that generates Alexa ASK language model files from an alternative compact notation",
   "homepage": "https://csubagio.github.io/alexa-language-shorthand/",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "https://github.com/csubagio/alexa-language-shorthand.git"
   },
   "scripts": {
-    "test-watch": "ts-mocha ./test/*.spec.ts -w --watch-files '**/*.ts'",
+    "test-watch": "ts-mocha ./test/*.spec.ts -w --watch-files '**/*.ts' --watch-ignore './test/skirmishModel.ts'",
     "test": "ts-mocha ./test/*.spec.ts",
     "build": "tsc && webpack",
     "develop-pages": "webpack -w"
